--- a/pages/homepage/main.profile.html
+++ b/pages/homepage/main.profile.html
@@ -177,6 +177,32 @@
             </div>
             <!-- orders completed         -->
             <hr>
+
+            <!-- rooms -->
+            <!-- <div class="settings">
+
+                <div class="account-manage">
+                    <div class="account">
+                        <h1>
+                            <a href="../../pages/homepage/user_orders.html">
+                                <i class="fa-solid fa-bag-shopping"></i> &NonBreakingSpace; Rooms
+                            </a>
+                        </h1>
+                    </div>
+        
+                    <div class="manage">
+                        <h3>Rooms that you booked </h3>
+                    </div>
+                </div>
+        
+                <span class="arrow">
+                    <a href="">
+                        <i class="fa-solid fa-angle-right"></i> 
+                    </a>
+                </span>
+            </div>
+            <!-- rooms completed -->
+            <!-- <hr>             --> 
         </div>
 
         <script src="../../js/header.js"></script>
