--- a/pages/shop/home.html
+++ b/pages/shop/home.html
@@ -47,10 +47,10 @@
             <div class="icons-info" id="sign-in">
 	
                 <a href="#" id="wishlist_anchor">
-                    <i class="fa-solid fa-heart"></i> &nbsp; My Wishlist (0)
+                    <i class="fa-solid fa-heart"></i> &nbsp; My Wishlist (0) 
                 </a> &nbsp;
                 <a href="#" id="mybag_anchor">
-                    <i class="fa-solid fa-bag-shopping"></i> &nbsp; My Bag (0)
+                    <i class="fa-solid fa-bag-shopping"></i> &nbsp; <p class="mybag" style="display: inline;"></p>
                 </a>
             </div>
         </div>
@@ -163,6 +163,7 @@
 	}
 </script>
         <script src="../../js/shop.js"></script>
-        <script src="../../js/alert_and_allow.js"></script>
+        <script src="../../js/shop_alert_and_allow.js"></script>
+        <script src="../../js/mybag_numbers.js"></script>
     </body>
 </html>
