--- a/pages/shop/whitetshirt.html
+++ b/pages/shop/whitetshirt.html
@@ -51,7 +51,7 @@
                     <i class="fa-solid fa-heart"></i> &nbsp; My Wishlist (0)
                 </a> &nbsp;
                 <a href="#" id="mybag_anchor">
-                    <i class="fa-solid fa-bag-shopping"></i> &nbsp; My Bag (0)
+                    <i class="fa-solid fa-bag-shopping"></i> &nbsp; <p class="mybag" style="display: inline;"></p>
                 </a>
             </div>
         </div>
@@ -249,17 +249,32 @@
         </footer>
 
         <script>
+//To Increasing the value in the my bag in the header:
+
+// let myBag = document.querySelector(".mybag");
+// let uniqueUser = JSON.parse(localStorage.getItem("unique_id"));
+
+// if (uniqueUser) {
+//   let cart = JSON.parse(localStorage.getItem("add_to_cart_products"));
+
+//   if (cart && cart.length > 0) {
+//     myBag.innerHTML = "My Bag (" + cart.length + ")";
+//   } else {
+//     myBag.innerHTML = "My Bag (0)";
+//   }
+// } else {
+//   myBag.innerHTML = "My Bag (0)";
+// }
+
+
+
 // * Data get from URL params------
 
-const productUniqueID = new URLSearchParams(window.location.search).get(
-  "clothing"
-);
+const productUniqueID = new URLSearchParams(window.location.search).get("clothing");
 // console.log(productUniqueID)
 const clothing_details = JSON.parse(localStorage.getItem("clothing_details"));
 
-const getProductData = clothing_details.find(
-  (data) => data.product_uuid === productUniqueID
-);
+const getProductData = clothing_details.find((data) => data.product_uuid === productUniqueID);
 
 // console.log(getProductData)
 
@@ -406,29 +421,29 @@ document.querySelector("div.photo-and-content").append();
 const add_products_to_bag = document.querySelector("#btn-buynow-to-add-in-bag");
 
 add_products_to_bag.addEventListener("click", function () {
-  const user_id = JSON.parse(localStorage.getItem("unique_id"));
+  //const user_id = JSON.parse(localStorage.getItem("unique_id"));
 
   const existing_user = JSON.parse(localStorage.getItem("unique_id"));
 
   const user_list = JSON.parse(localStorage.getItem("user_list"));
 
-  const existing =
-    user_list.length &&
-    JSON.parse(localStorage.getItem("user_list")).some(
-      (data) => data.email === existing_user
-    );
+  const existing = user_list.length && JSON.parse(localStorage.getItem("user_list")).some((data) => data.email === existing_user);
 
   if (!existing) {
-    alert("You are not logged in. Please login to continue!");
+    alert("You are not logged in. Please login to buy the products you love!");
   } else {
     const product_id = this.dataset.id;
     localStorage.setItem("unique_id_of_products", JSON.stringify(product_id));
-    console.log(product_id);
+    //console.log(product_id);
+
+    const toCheckUniqueIDtoviewProduct = JSON.parse(localStorage.getItem("unique_id"));
+    //console.log(toCheckUniqueIDtoviewProduct);
 
     const products = JSON.parse(localStorage.getItem("clothing_details"));
 
     const check_product = products.find((e) => e.product_uuid == product_id);
     check_product["product_qty"] = 1;
+    check_product["userUniqueToGetBag"] = existing_user;
 
     const array_for_products = JSON.parse(localStorage.getItem("add_to_cart_products")) || [];
 
@@ -449,7 +464,8 @@ add_products_to_bag.addEventListener("click", function () {
 });
 </script>
         <script src="../../js/shop.js"></script>
-        <script src="../../js/alert_and_allow.js"></script>
+        <script src="../../js/shop_alert_and_allow.js"></script>
+        <script src="../../js/mybag_numbers.js"></script>
 
     </body>
 </html>
