--- a/pages/book now/guestinformation.html
+++ b/pages/book now/guestinformation.html
@@ -289,7 +289,7 @@ const td9 = document.createElement("td");
 td9.className = "important_datas";
 td9.textContent = "Ticket";
 const td10 = document.createElement("td");
-td10.textContent = "Adult: $90 | Children: $75 (Per head)";
+td10.textContent = "Adult: $80 | Children: $65 (Per head)";
 tr5.appendChild(td9);
 tr5.appendChild(td10);
 table.appendChild(tr5);
@@ -299,7 +299,7 @@ const td11 = document.createElement("td");
 td11.className = "important_datas";
 td11.textContent = "Sub Total";
 const td12 = document.createElement("td");
-td12.textContent = "$1600";
+td12.textContent = "$" + bookedDetail["adultTotalPrice"] + " + " + bookedDetail["childrenTotalPrice"];
 tr6.appendChild(td11);
 tr6.appendChild(td12);
 table.appendChild(tr6);
@@ -309,31 +309,68 @@ const td13 = document.createElement("td");
 td13.className = "important_datas";
 td13.textContent = "Grand Total";
 const td14 = document.createElement("td");
-td14.textContent = "$1600";
+//To give to variable name to subtotal
+const total_amount = parseInt(bookedDetail["adultTotalPrice"]) + parseInt(bookedDetail["childrenTotalPrice"]);
+
+td14.textContent = "$" + total_amount;
 tr7.appendChild(td13);
 tr7.appendChild(td14);
 table.appendChild(tr7);
-
 
 document.querySelector("div.in-out").append(table);
     
 //To Cancel the ticket:
 
-function CancelDetail(){
-const arraySession = JSON.parse(sessionStorage.getItem("formDetail"));
-const gettingArrayLocal = JSON.parse(localStorage.getItem("reservationDetails"));
+// function CancelDetail(){
+// const arraySession = JSON.parse(sessionStorage.getItem("formDetail"));
+// const gettingArrayLocal = JSON.parse(localStorage.getItem("reservationDetails"));
 
-for(let i = 0; i<gettingArrayLocal.length; i++){
-if(gettingArrayLocal[i].reservationUniqueId === arraySession.reservationUniqueId){
-    gettingArrayLocal.splice(gettingArrayLocal[i], 1);
-    sessionStorage.removeItem("formDetail");
-    alert("Are you sure you want to cancel your ticket");
+// for(let i = 0; i<gettingArrayLocal.length; i++){
+// if(gettingArrayLocal[i].reservationUniqueId === arraySession.reservationUniqueId){
+//     console.log(gettingArrayLocal[i]);
+//     gettingArrayLocal.splice(gettingArrayLocal[i], 1);
+//     sessionStorage.removeItem("formDetail");
+//     alert("Are you sure you want to cancel your ticket");
+// }
+// }
+// window.location.href = "../../pages/other pages/booknow.html"
+// }
+
+function CancelDetail() {
+  const arraySession = JSON.parse(sessionStorage.getItem("formDetail"));
+  const gettingArrayLocal = JSON.parse(localStorage.getItem("reservationDetails"));
+
+  for (let i = 0; i < gettingArrayLocal.length; i++) {
+    if (gettingArrayLocal[i].reservationUniqueId === arraySession.reservationUniqueId) {
+      gettingArrayLocal.splice(i, 1);
+      sessionStorage.removeItem("formDetail");
+      localStorage.setItem("reservationDetails", JSON.stringify(gettingArrayLocal));
+      alert("Are you sure you want to cancel your ticket");
+      break;
+    }
+  }
+  window.location.href = "../../pages/other pages/booknow.html";
 }
-}
-window.location.href = "../../pages/other pages/booknow.html"
+
+
+
+function AcceptDetail(){
+
+let bookingsConfirm = JSON.parse(localStorage.getItem("bookingsConfirmFromTheUser")) || [];
+bookedDetail["totalPriceFromtheUserInBooking"] = total_amount;
+
+// Add the current booking to the array
+bookingsConfirm.push(bookedDetail);
+
+// Save the updated array to local storage
+localStorage.setItem("bookingsConfirmFromTheUser", JSON.stringify(bookingsConfirm));
+
+alert("Your Ticket has been booked.")
+window.location.href = "../../pages/book now/final-book-now.html";
 }
 </script>
 <script src="../../js/header.js"></script>
+
 
 
 </html>
