feat: updated book

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 <div class="customer">
 <h2>Our Partner</h2>
 
-<a href=""> <img src="./assets/images/main-logo.png" class="srcatering" width="200px" alt="sr-catering-logo"> </a>
+<a href="https://deploy-preview-1--sr-catering.netlify.app/"> <img src="./assets/images/main-logo.png" class="srcatering" width="200px" alt="sr-catering-logo"> </a>
 </div>
 
 
