--- a/pages/shop/cart.html
+++ b/pages/shop/cart.html
@@ -52,7 +52,7 @@
             <div class="icons-info" id="sign-in">
 
                 <a href="#" id="wishlist_anchor">
-                    <i class="fa-solid fa-heart"></i> &nbsp; My Wishlist 
+                    <i class="fa-solid fa-heart"></i> &nbsp; My Wishlist (0)
                 </a> &nbsp;
                 <a href="#" id="mybag_anchor">
                     <i class="fa-solid fa-bag-shopping"></i> &nbsp; <p class="mybag" style="display: inline;"></p>
