--- a/admin/admin html/hotels/hotel-upload.html
+++ b/admin/admin html/hotels/hotel-upload.html
@@ -205,6 +205,7 @@ document.getElementById("save_details").addEventListener("click", function creat
     const roomDiscount = document.getElementById("offer_discount").value;
     const roomAmenties1 = document.getElementById("amenties_1").value;
     const roomAmenties2 = document.getElementById("amenties_2").value;
+    const uniqueIdForRooms = crypto.randomUUID();
 
     if (roomImage !== "" && hotelResortName !== "" && roomName !== "" && roomPrice !== "" && roomStrikeoutPrice !== "" && noOfAdultsInRoom !== "" && noOfChildrenInRoom !== "" && roomSize !== "" &&
         roomDiscount !== "" && roomAmenties1 !== "" && roomAmenties2 !== "") {
@@ -224,7 +225,8 @@ document.getElementById("save_details").addEventListener("click", function creat
                     roomSize,
                     roomDiscount,
                     roomAmenties1,
-                    roomAmenties2
+                    roomAmenties2,
+                    uniqueIdForRooms,
                 });
             }
             localStorage.setItem("hotelDetails", JSON.stringify(hotelDetails));
@@ -244,7 +246,8 @@ document.getElementById("save_details").addEventListener("click", function creat
                     roomSize,
                     roomDiscount,
                     roomAmenties1,
-                    roomAmenties2
+                    roomAmenties2,
+                    uniqueIdForRooms,
                 });
             }
             localStorage.setItem("resortDetails", JSON.stringify(resortDetails));
