feat: update rooms and upload

--- a/admin/admin html/hotels/hotel-upload.html
+++ b/admin/admin html/hotels/hotel-upload.html
@@ -239,7 +239,7 @@ document.getElementById("save_details").addEventListener("click", function creat
                     roomImage,
                     hotelResortName,
                     roomName,
-                    roomPrice,
+                    roomPriceResort,
                     roomStrikeoutPrice,
                     noOfAdultsInRoom,
                     noOfChildrenInRoom,
